<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/acceuil"
            android:title="@string/accueil" />
        <item
            android:id="@+id/expositions"
            android:title="@string/oeuvres" />
        <item
            android:id="@+id/nav_profil"
            android:title="@string/profil"
            android:visible="true" />
        <item
            android:id="@+id/nav_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_option"
            android:title="@string/options" />
        <item
            android:id="@+id/nav_isLogged"
            android:title="@string/deconnection" />

    </group>

</menu>
